# sql-query

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  sandbox.cpp
include/sql_query/: query_collector.hpp
src/: CMakeLists.txt  query_collector.cpp
